// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar ナビゲーションバーを閉じる 1`] = `
"<div>
  <div class=\\"nav-bar\\">
    <div class=\\"nav-bar__box\\"><a href=\\"/\\" class=\\"base-logo\\">ダミーロゴ</a>
      <div class=\\"nav-bar__icon-box\\">
        <div class=\\"nav-icon\\"><button><span class=\\"nav-icon__border nav-icon__top nav-icon__top--close\\"></span> <span class=\\"nav-icon__border nav-icon__middle\\"></span> <span class=\\"nav-icon__border nav-icon__bottom nav-icon__bottom--close\\"></span> <span class=\\"nav-icon__text\\"></span></button></div>
        <p class=\\"nav-bar__text\\">
          NAVI
        </p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`NavBar ナビゲーションバーを開く 1`] = `
"<div>
  <div class=\\"nav-bar\\">
    <div class=\\"nav-bar__box\\"><a href=\\"/\\" class=\\"base-logo\\">ダミーロゴ</a>
      <div class=\\"nav-bar__icon-box\\">
        <div class=\\"nav-icon\\"><button><span class=\\"nav-icon__border nav-icon__top nav-icon__top--open\\"></span> <span class=\\"nav-icon__border nav-icon__middle nav-icon__middle--fade\\"></span> <span class=\\"nav-icon__border nav-icon__bottom nav-icon__bottom--open\\"></span> <span class=\\"nav-icon__text\\"></span></button></div>
        <p class=\\"nav-bar__text\\">
          CLOSE
        </p>
      </div>
    </div>
  </div>
</div>"
`;
